--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
   </script>
  <link rel="canonical" href="https://dandowneyseo.github.io/verdi-nv-ai-growth-engine-for-local-business-success-2025-12-02-pie5w/" />
 <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="f8caef3241cec7d0524e" />
 </head>
  <body class="bg-gray-950 text-white">
   <!-- Header & Navigation -->
